<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_measure_3_"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30px"
    android:paddingTop="20px"
    android:paddingRight="10px"
    android:background="@drawable/background1"
    android:stretchColumns="*"
    >
    <ScrollView
        android:layout_width="825dp"
        android:layout_height="match_parent">
        <TableLayout
            android:id="@+id/tablelayout_1"
            android:layout_width="820dp"
            android:layout_height="wrap_content">
            <TableRow
                android:id="@+id/tableRow00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0C9A73"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/measure3_TextView0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/measure3_TextView1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/measure3_TextView2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/measure3_TextView3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/measure3_TextView4"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </TableRow>

        </TableLayout>
    </ScrollView>
    <TextView
        android:text="@string/measure3_TextView5"
        android:textColor="#77000000"
        android:textSize="24sp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/button_r"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:background="@drawable/button1"
        android:text="@string/buttonRtn"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>



