<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_measure_1_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuaa.intphyexpplatform.Measure_1_Activity"
    android:background="@drawable/background1"
    android:keepScreenOn="true">


    <TextView
        android:id="@+id/TextView1"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:gravity="end|center_vertical"
        android:text="@string/measure1_TextView1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/textview_s"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_toRightOf="@+id/TextView1"
        android:layout_toEndOf="@+id/TextView1"
        android:textColor="#f00"

        android:gravity="start|center_vertical"
        android:textSize="27sp"/>
    <ToggleButton
        android:id="@+id/button_s1"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/button2"
        android:layout_below="@+id/TextView1"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignStart="@+id/TextView1"
        android:checked="false"
        android:textSize="22sp"
        android:textOff="@string/measure1_button_s1"
        android:textOn="@string/measure1_button_s1"/>
    <ToggleButton
        android:id="@+id/button_s2"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/button2"
        android:checked="false"
        android:textSize="22sp"
        android:textOff="@string/measure1_button_s2"
        android:textOn="@string/measure1_button_s2"
        android:layout_below="@+id/button_s1"
        android:layout_alignLeft="@+id/button_s1"
        android:layout_alignStart="@+id/button_s1" />
    <ToggleButton
        android:id="@+id/button_s3"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/button2"
        android:layout_below="@+id/button_s2"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignStart="@+id/TextView1"
        android:checked="false"
        android:textSize="22sp"
        android:textOff="@string/measure1_button_s3"
        android:textOn="@string/measure1_button_s3"/>
    <ToggleButton
        android:id="@+id/button_s4"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/button2"
        android:layout_below="@+id/button_s3"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignStart="@+id/TextView1"
        android:checked="false"
        android:textSize="22sp"
        android:textOff="@string/measure1_button_s4"
        android:textOn="@string/measure1_button_s4"/>
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:gravity="end|center_vertical"
        android:text="@string/measure1_TextView2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="37dp"
        android:layout_alignTop="@+id/TextView1"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/measure1_editText2"
        android:background="@drawable/editsharp"
        android:textColor="#000"
        android:inputType="number"
        android:maxLength="8"
        android:textSize="22sp"
        android:layout_marginRight="154dp"
        android:layout_marginEnd="154dp"
        android:layout_above="@+id/TextView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:gravity="end|center_vertical"
        android:text="@string/measure1_TextView3"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@+id/TextView2"
        android:layout_toLeftOf="@+id/TextView6"
        android:layout_toStartOf="@+id/TextView6" />
    <TextView
        android:id="@+id/TextView6"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:gravity="start|center_vertical"
        android:textColor="#000"
        android:textSize="22sp"
        android:background="@drawable/editsharp2"
        android:layout_above="@+id/TextView4"
        android:layout_toRightOf="@+id/TextView2"
        android:layout_toEndOf="@+id/TextView2" />
    <TextView
        android:id="@+id/TextView4"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:gravity="end|center_vertical"
        android:text="@string/measure1_TextView4"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@+id/TextView3"
        android:layout_toLeftOf="@+id/TextView7"
        android:layout_toStartOf="@+id/TextView7" />
    <TextView
        android:id="@+id/TextView7"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:gravity="start|center_vertical"
        android:textColor="#000"
        android:textSize="22sp"
        android:background="@drawable/editsharp2"
        android:layout_alignBottom="@+id/TextView4"
        android:layout_toRightOf="@+id/TextView3"
        android:layout_toEndOf="@+id/TextView3" />
    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/button1"
        android:text="@string/measure1_button1"
        android:textSize="22sp"
        android:textColor="#fff"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/TextView4"
        android:layout_alignEnd="@+id/TextView4" />
    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/button1"
        android:text="@string/measure1_button2"
        android:textSize="22sp"
        android:textColor="@android:color/white"

        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/TextView4"
        android:layout_toEndOf="@+id/TextView4"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/TextView8"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:text="@string/measure1_TextView8"
        android:layout_alignTop="@+id/TextView6"
        android:layout_toRightOf="@+id/TextView6"
        android:layout_toEndOf="@+id/TextView6" />

    <TextView
        android:id="@+id/TextView9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:text="@string/measure1_TextView9"
        android:layout_alignTop="@+id/TextView7"
        android:layout_toRightOf="@+id/TextView7"
        android:layout_toEndOf="@+id/TextView7" />
</RelativeLayout>
