<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuaa.intphyexpplatform.ListActivity"
    android:background="@drawable/background1"
    android:keepScreenOn="true">

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:background="@drawable/bigbuttun"
        android:text="@string/list_button2"
        android:textColor="@android:color/white"
        android:textSize="24sp"

        tools:layout_editor_absoluteY="20dp"

        android:layout_alignBottom="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_toLeftOf="@+id/button"
        android:layout_marginRight="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:background="@drawable/bigbuttun"

        android:text="@string/list_button1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="20dp"
        android:layout_alignTop="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />
    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/button1"

        android:text="@string/buttonBac"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="61dp" />

</RelativeLayout>
