<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_theory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuaa.intphyexpplatform.TheoryActivity"
    android:background="@drawable/background1"
    android:keepScreenOn="true">

    <Button
        android:id="@+id/button1"
        android:layout_width="138dp"
        android:layout_height="61dp"
        android:background="@drawable/button1"
        android:textSize="22sp"
        android:text="@string/buttonRtn"
        android:textColor="@android:color/white"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/bigbuttun"

        android:text="@string/theory_button2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="32dp"
        android:layout_marginLeft="133dp"
        android:layout_marginStart="133dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/bigbuttun"
        android:text="@string/theory_button3"
        android:textColor="@android:color/white"
        android:textSize="20sp"

        tools:layout_editor_absoluteY="33dp"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
